fixed alignment

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ progress::-webkit-progress-bar {
 
 .main-container {
   margin-bottom: 125px;
+  padding-right: 10px;
   /* padding-left: 10px;
   padding-right: 10px; */
 }
@@ -292,6 +293,13 @@ h4.see-all {
 .sidebar-container h6 {
   font-size: 0.7rem;
   font-weight: 600;
+}
+
+.activehome {
+  background-color: rgba(46, 41, 41, 0.945);
+  /* padding-left: 10px; */
+  width: 100%;
+  border-radius: 5px;
 }
 
 .fixedLink {
